bug pageAbout : creer container collapse  ??  + enlever h1 dans hero

--- a/my-react-app/src/components/carrousel.module.scss
+++ b/my-react-app/src/components/carrousel.module.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     //background: black;
     border-radius: 10px;
-    width:100%;
+    width:90%;
   }
   
   .carrousel__list {
