--- a/my-react-app/src/components/collapse.module.scss
+++ b/my-react-app/src/components/collapse.module.scss
@@ -30,22 +30,55 @@
     // Animation Slide Down
     &__content {
       //background-color: white;
-      padding: 10px 20px 20px;
+      /* padding: 10px 20px 20px;
       overflow: hidden; // Cache le contenu hors du conteneur
       max-height: 0; // Contenu initialement caché
       opacity: 0; // Rend le contenu invisible au départ
       transform: translateY(-10px); // Le contenu est légèrement décalé vers le haut
-      transition: max-height 1.2s ease-out, opacity 1.2s ease-out, transform 1.2s ease-out; // Animation fluide (0.5 ease par defaut)
+      transition: max-height 1.2s ease-out, opacity 1.2s ease-out, transform 1.2s ease-out; // Animation fluide (0.5 ease par defaut) */
       background: var(--Gray, rgba(246, 246, 246, 0.45));
       border-radius: 5px;
+      overflow: hidden;
+      transition: max-height 0.6s ease-in-out;
+      max-height: 0; // Contenu initialement caché
+      height: 200px;
     
       // Quand le contenu est visible
       &--open {
-        max-height: 500px; // Ajuste en fonction de la taille max estimée
-        opacity: 1; // Rend le contenu visible
-        transform: translateY(0); // Remet le contenu à sa place
+        /* max-height: 500px; // Ajuste en fonction de la taille max estimée
+        opacity: 1; // Rend le contenu visible 
+        transform: translateY(0); // Remet le contenu à sa place */
+        max-height: 1000px;
+      }
     }
-}
+
+    &__text {
+        padding: 0 20px;
+        transform: translateY(-100%); // Le contenu est légèrement décalé vers le haut
+        transition: max-height 0.6s ease-out, padding 0.6s ease-out;
+
+        .collapse__content--open & {
+            transform: translateY(0);
+            padding: 10px 20px;
+            text-align: left;
+        }
+    }
+
+    &__arrow {
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 0px;
+        color: white;
+        font-size: 24px; // Ajuste la taille de l'icône
+        transition: transform 0.5s ease; // ✅ Animation fluide de la rotation
+        &--open {
+            transform: rotate(180deg); // ✅ Rotation complète vers le bas
+        }
+        &--closed {
+            transform: rotate(0deg); // ✅ Position initiale
+        }
+    }
   
     ul {
       list-style-type: none;
@@ -56,5 +89,9 @@
       list-style: disc;
     } */
 }
-  
-  
+
+.special-collapse {
+    border: 2px solid #FF6060;
+    border-radius: 8px;
+    padding: 15px;
+}
